Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-1470

Client gets NullPointerException when catalog service is down

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • Impala 2.0
    • Impala 2.10.0
    • Catalog

    Description

      Queries fail with a status indicating a NullPointerException occurred when the catalog service is not running.

      Instead we should provide a more helpful error message, e.g. indicating that the daemon could not connect to the catalog service.

      The workaround is to start the catalog service.

      I1114 12:37:57.146244 21527 Frontend.java:797] analyze query explain select STRAIGHT_JOIN id from alltypes a join alltypes b on a.id = b.id
      I1114 12:37:57.146703 21527 Frontend.java:746] Requesting prioritized load of table(s): functional.alltypes
      I1114 12:37:57.147213 21527 thrift-util.cc:97] TSocket::open() connect() <Host: localhost Port: 26000>Connection refused
      I1114 12:37:57.155485 21527 status.cc:44] Couldn't open transport for localhost:26000 (connect() failed: Connection refused)
          @     0x7f193dfec7be  (unknown)
          @     0x7f193c8cb9bd  (unknown)
          @     0x7f193c8cba3f  (unknown)
          @     0x7f193c361b29  (unknown)
          @     0x7f193c36140d  (unknown)
          @     0x7f193db8b0b2  (unknown)
          @     0x7f193db86951  (unknown)
          @     0x7f193db76f4f  (unknown)
          @     0x7f193bbf83c5  (unknown)
          @     0x7f193151aaf9  (unknown)
      I1114 12:37:57.155498 21527 thrift-client.cc:55] Unable to connect to localhost:26000
      E1114 12:37:57.155515 21527 fe-support.cc:287] Couldn't open transport for localhost:26000 (connect() failed: Connection refused)
      I1114 12:37:57.155858 21527 jni-util.cc:177] java.lang.NullPointerException
      	at com.cloudera.impala.service.Frontend.requestTblLoadAndWait(Frontend.java:749)
      	at com.cloudera.impala.service.Frontend.analyzeStmt(Frontend.java:815)
      	at com.cloudera.impala.service.Frontend.createExecRequest(Frontend.java:835)
      	at com.cloudera.impala.service.JniFrontend.createExecRequest(JniFrontend.java:139)
      I1114 12:37:57.172777 21527 status.cc:44] NullPointerException: null
      

      Attachments

        Activity

          People

            tianyiwang Tianyi Wang
            henryr Henry Robinson
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: